<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical">
    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:hint="@string/old_pass"
        android:textCursorDrawable="@drawable/color_cursor"
        android:paddingLeft="10dp"
        android:textColor="@color/text_primary"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@drawable/color_cursor"
        android:hint="@string/new_pass"
        android:paddingLeft="10dp"
        android:textColor="@color/text_primary"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/confirm_pass"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/confirm_pass"
        android:paddingLeft="10dp"
        android:textColor="@color/text_primary"
        android:textSize="15dp" />

    <Button
        android:id="@+id/change_pass"
        style="@style/button"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Change Password"/>

    <Button
        android:id="@+id/showdb"
        style="@style/button"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="Show DB"/>
</LinearLayout>