<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textColor="@color/text_primary"
                    android:textSize="15dp" />


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_gray">

                    <Spinner
                        android:id="@+id/street_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:padding="5dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light" />
                </RelativeLayout>

            </LinearLayout>

            <com.sidcoparking.utils.ExpandableHeightGridView
                android:id="@+id/gridview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:isScrollContainer="false"
                android:numColumns="3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/fine_type"
                    android:textColor="@color/text_primary"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/border_gray">

                    <Spinner
                        android:id="@+id/fine_spinner"
                        style="@style/Widget.AppCompat.DropDownItem.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/veh_no"
                    android:textColor="@color/text_primary"
                    android:textSize="15dp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/vehicleno"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:maxLength="4"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textSize="18dp"
                    app:backgroundTint="@color/text_primary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_mode"
                    android:textColor="@color/text_primary"
                    android:textSize="15dp" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/border_gray">

                    <Spinner
                        android:id="@+id/payment_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/red"
                        android:padding="5dp"
                        android:theme="@style/ThemeOverlay.AppCompat.Light" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/text_primary"
                    android:textSize="15dp" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/amount"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColor="@color/text_primary"
                    android:textSize="18dp"
                    app:backgroundTint="@color/text_primary" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_fine"
                style="@style/button"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>